# 2nd-year-internship

./: LICENSE  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: projectrobot_gazebo.pc  projectrobot_navigation.pc  projectrobot_sim.pc  projectrobot_slam.pc  projectrobot_teleop.pc
devel/lib/projectrobot_gazebo/: projectrobot_drive
devel/lib/projectrobot_sim/: projectrobot_sim_node
devel/lib/projectrobot_slam/: flat_world_imu_node
devel/lib/projectrobot_teleop/: projectrobot_teleop_key.py
devel/lib/python3/dist-packages/projectrobot_teleop/: __init__.py
devel/share/projectrobot_gazebo/cmake/: projectrobot_gazeboConfig.cmake
devel/share/projectrobot_navigation/cmake/: projectrobot_navigationConfig.cmake
devel/share/projectrobot_sim/cmake/: projectrobot_simConfig.cmake
devel/share/projectrobot_slam/cmake/: projectrobot_slamConfig.cmake
devel/share/projectrobot_teleop/cmake/: projectrobot_teleopConfig.cmake
src/projectrobot/: CMakeLists.txt  package.xml
src/projectrobot_gazebo/: CMakeLists.txt
src/projectrobot_gazebo/launch/: projectrobot_empty_world.launch  projectrobot_gazebo_rviz.launch  projectrobot_myworld.launch  projectrobot_simulation.launch
src/projectrobot_gazebo/src/: projectrobot_drive.cpp
src/projectrobot_gazebo/worlds/: my_world.world
src/projectrobot_navigation/: CMakeLists.txt  package.xml
src/projectrobot_navigation/launch/: amcl.launch  move_base.launch  projectrobot_navigation.launch
src/projectrobot_sim/: CMakeLists.txt  package.xml
src/projectrobot_sim/launch/: projectrobot_sim.launch
src/projectrobot_sim/src/: projectrobot_sim.cpp
src/projectrobot_slam/: CMakeLists.txt
src/projectrobot_slam/launch/: projectrobot.launch  projectrobot_gmapping.launch
src/projectrobot_slam/src/: flat_world_imu_node.cpp
src/projectrobot_teleop/: CMakeLists.txt  package.xml
src/projectrobot_teleop/launch/: projectrobot_teleop_key.launch
