<?xml version="1.0"?>
<package format="2">
  <name>projectrobot_navigation</name>
  <version>1.3.2</version>
  <description>
    Starting the navigation
  </description>
  <license>
    BSD
  </license>
  <maintainer email="mouhamed.amin.ben.ammar@gmail.com">
    Mohamed Amine Ben Ammar
  </maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
</package>
