<?xml version="1.0"?>
<package format="2">
  <name>projectrobot_teleop</name>
  <version>1.3.2</version>
  <description>
    Teleoperation using keyboard for the robot
  </description>
  <license>
    BSD
  </license>
  <maintainer email="mouhamed.amin.ben.ammar@gmail.com">
    Mohamed Amine Ben Ammar
  </maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
